--- a/sites/all/themes/zen/eca/html-elements.css
+++ b/sites/all/themes/zen/eca/html-elements.css
@@ -11,9 +11,13 @@ body {
   font-family: Arial, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .views-table caption {
 	color: #333;
   font-family: Helvetica, Arial, sans-serif;
+}
+
+h2, .views-table caption {
+  font-size:1.5em;
 }
 
 p {
