--- a/trunk/sites/all/themes/zen/eca/layout.css
+++ b/trunk/sites/all/themes/zen/eca/layout.css
@@ -78,6 +78,10 @@ html, body{
 }
 
 /* SECONDARY **********/
+.no-sidebars #secondary, .sidebar-right #secondary {
+  margin-left:250px;
+}
+
 #secondary ul li {
    display: block;
    float: left; 
