--- a/trunk/sites/all/themes/zen/eca/layout.css
+++ b/trunk/sites/all/themes/zen/eca/layout.css
@@ -1,9 +1,10 @@
 html, body{
 	height: 100%;
-	background: url(img/bg.png) #cccccc  repeat;
-  /*background: url(img/bg_.png) #e6e6e6  repeat-x;*/
 	margin:0;
 	padding:0;	
+}
+body {
+  background: url(img/bg.png) #f5f5f5  repeat-x;
 }
 
 #skip-to-nav, #print-info {
@@ -25,8 +26,13 @@ html, body{
   width: 960px;
 }
 
-#header, #content-inner, #footer .content-class, #sidebar-left-inner .content-class, #sidebar-right-inner .content-class {
-   background: #fff;
+#header {  
+  /*border-bottom: 1px solid #e6e6e6;*/
+  height: 120px;
+}
+
+#header-inner {
+  padding-top:15px;
 }
 
 #sidebar-left-inner .content-class, #sidebar-right-inner .content-class, #content, #header {
@@ -35,7 +41,7 @@ html, body{
 
 #logo-title {
   width: 250px;
-  height: 75px;
+  height: 84px;
   float:left;
 }
 
@@ -46,11 +52,11 @@ html, body{
 }
 
 #navbar-inner {
-  padding-top: 35px;
+  padding-top: 15px;
 }
 
-#search-box {
-  width: 160px;
+#search-box, #finder-box{
+  width: 140px;
   float: right;
   margin: 0;
   padding: 0;
@@ -78,8 +84,10 @@ html, body{
 }
 
 /* SECONDARY **********/
-.no-sidebars #secondary, .sidebar-right #secondary {
-  margin-left:250px;
+
+
+#secondary{
+ clear: both;
 }
 
 #secondary ul li {
@@ -105,7 +113,7 @@ html, body{
 /* CONTENT + SIDEBARS *********************************************/
 
 #content-inner {
-  padding: 10px;
+  padding: 15px 0 15px 0;
 }
 
 /** content **/
@@ -113,11 +121,20 @@ html, body{
 .no-sidebars #content
 {
   float: left;
-  width: 960px;
-  margin-left: 0;
+  width: 710px;
+  margin-left: 250px;
   margin-right: -960px; /* Negative value of #content's width + left margin. */
   padding: 0; /* DO NOT CHANGE. Add padding or margin to #content-inner. */
 }
+/*#content,
+.no-sidebars #content
+{
+  float: left;
+  width: 960px;
+  margin-left: 0;
+  margin-right: -960px; 
+  padding: 0; 
+}*/
 
 .sidebar-left #content
 {
@@ -157,7 +174,8 @@ html, body{
 
 #sidebar-left-inner
 {
-  margin: 0 10px 0 0;
+  margin: 0 20px 0 0;
+  padding: 15px 0 15px 0;
 }
 
 /** sidebar-right **/
@@ -172,7 +190,8 @@ html, body{
 
 #sidebar-right-inner
 {
-  margin: 0 0 0 10px;  
+  margin: 0 0 0 20px;
+  padding: 15px 0 15px 0;  
 }
 
 /* FOOTER *********************************************/
