--- a/trunk/sites/all/themes/zen/eca/tabs.css
+++ b/trunk/sites/all/themes/zen/eca/tabs.css
@@ -18,7 +18,7 @@
   ul.primary
   {
     margin: 0;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid #97BFBC;
     list-style: none;
     white-space: nowrap;
     line-height: normal;
@@ -39,7 +39,7 @@
     margin: 0;
     padding: 0 0 0 5px;
     text-decoration: none;
-    color: #666;
+    color: #333;
     background: none !important;
     border: none !important;
     text-transform: uppercase;
@@ -55,7 +55,7 @@
     padding: 2px 6px 0 6px;
     border-width: 0;
     line-height: 18px;
-    background: #f2f2f2;
+    background: #e6e6e6;
   }
 
   ul.primary li a:hover
@@ -74,8 +74,8 @@
   ul.primary li.active a .tab,
   ul.primary li.active a:hover .tab
   {
-    background: #e6e6e6;    
-    color: #333;
+    background: #97BFBC;    
+    color: #fff;
   }
 
   ul.secondary
