--- a/trunk/d/sites/all/themes/zen/eca/tabs.css
+++ b/trunk/d/sites/all/themes/zen/eca/tabs.css
@@ -105,7 +105,7 @@
     border: 1px solid #c0c0c0;
     text-decoration: none;
     color: #777;
-    background: url(images/tab-secondary.png) repeat-x left -56px;
+    /*background: url(images/tab-secondary.png) repeat-x left -56px;*/
   }
 
   ul.secondary a .tab
@@ -119,7 +119,7 @@
 
   ul.secondary a:hover
   {
-    background: url(images/tab-secondary.png) repeat-x left bottom;
+    /*background: url(images/tab-secondary.png) repeat-x left bottom;*/
   }
 
   ul.secondary a.active,
@@ -127,5 +127,5 @@
   {
     border: 1px solid #c0c0c0;
     color: #000;
-    background: url(images/tab-secondary.png) repeat-x left top;
+    /*background: url(images/tab-secondary.png) repeat-x left top;*/
   }
