--- a/exhibit/api/styles/util/views.css
+++ b/exhibit/api/styles/util/views.css
@@ -73,3 +73,32 @@ div.exhibit-collectionView-footer {
     margin:     2em 0;
 }
 
+div.exhibit-collectionView-pagingControls {
+    margin: 1em 0;
+    text-align: center;
+}
+
+.exhibit-collectionView-pagingControls-currentPage {
+    padding: 0px 0.5em;
+    font-weight: bold;
+}
+
+.exhibit-collectionView-pagingControls-page {
+    padding: 0px 0.5em;
+}
+
+ul.exhibit-collectionView-pagingControls {
+    clear: both;
+    margin: 2em 0;
+    text-align: center;
+}
+ul.exhibit-collectionView-pagingControls li {
+    list-style-type: none;
+    display: inline;
+}
+ul.exhibit-collectionView-pagingControls li a {
+    border: 1px solid #90C2E1;
+    background: #DFEDF7;
+    padding: 2px 5px;
+    text-decoration: none;
+}
